[package]
name = "haunted-house"
version = "0.0.16"
edition = "2021"
default-run = "haunted-house"

[[bin]]
name = "operator"
required-features = ["operator"]

[dependencies]

#tracing = "0.1"
#tracing-flame = "*"
#tracing-subscriber = "*"
memmap2 = "*"


serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_with = "2.2"
# toml = "0.6"
postcard = { version = "1.0.2", features = ["alloc"] }
nom = "7"
bytes = "*"
byteorder = "1.4"
# humansize = "2"
parse-size = { version = "1", features = ["std"] }

anyhow = "1"
uuid = { version = "*", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "std"] }
time = { version = "0.3" }
parse_duration = "2"
num-format = "0.4"

tempfile = "3"
rand = "0.8"
deadpool = "0.9"

log = "*"
env_logger = "0.9"
bitvec = { version = "1", features = ["serde"]}
hex = "*"
sha2 = "*"
itertools = "*"
weak-self = "*"
gethostname = "0.4"
yara = { version = "0.16", features= ["vendored"] }
# yara-x = {git = "https://github.com/VirusTotal/yara-x.git"}
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

poem = { version = "1.3", features = ["anyhow", "websocket", "openssl-tls"] }
openssl = { version = "0.10" }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
http = "0.2"
tokio-tungstenite = "0.19"

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }

pyo3 = { version = "0.17", features = ["anyhow", "chrono"], optional = true }
pyo3-asyncio = { version = "0.17", features = ["attributes", "tokio-runtime"], optional = true }
pyo3-log = { version = "0.7", optional = true }

azure_core = "0.8"
azure_identity = "0.9"
azure_storage = "0.9"
azure_storage_blobs = "0.9"

aws-config = "0.54"
aws-sdk-s3 = "0.24"
aws-types = "0.54"
aws-smithy-client = "0.54"
hyper-rustls = { version = "0.23", features = [] }
rustls = "0.20"

kube = {version = "0.80", features = ["runtime", "derive"], optional = true }
schemars = { version = "0.8.6", optional = true }
k8s-openapi = { version = "0.17", features = ["v1_26"], optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
assertor = "*"

[features]
python = ["pyo3", "dep:pyo3-asyncio", "dep:pyo3-log"]
extension-module = ["python", "pyo3/extension-module"]
operator = ["dep:kube", "dep:schemars", "dep:k8s-openapi", "dep:serde_yaml"]
#default = ["extension-module"]
default = []