[package]
name = "haunted-house"
version = "0.0.33"
edition = "2021"
default-run = "haunted-house"

[[bin]]
name = "operator"
required-features = ["operator"]

[dependencies]

# Language utilities
lazy_static = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "std"] }
time = { version = "0.3" }
rand = "0.8"
itertools = "0.10"

# Environment interfaces
tempfile = "3"
log = "0.4"
env_logger = "0.9"
# gethostname = "0.4"
clap = { version = "4", features = ["derive"] }

# Data proccessing and manipulating
memmap2 = "0.7"
byteorder = "1.4"
bitvec = { version = "1", features = ["serde"]}
yara = { version = "0.16", features= ["vendored"] }
# yara-x = {git = "https://github.com/VirusTotal/yara-x.git"}
# bytes = "1.4"
# sha2 = "0.10"

# Parsing and serialization
regex = "1.8"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_with = "2.2"
postcard = { version = "1.0.2", features = ["alloc"] }
nom = "7"
hex = "0.4"
parse-size = { version = "1", features = ["std"] }
schemars = { version = "0.8.6", optional = true }
serde_yaml = { version = "0.9", optional = true }
boreal-parser = "0.3"
base64 = "0.21"

# Database tools
deadpool = "0.9"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }

# Core framework
tokio = { version = "1", features = ["full"] }
# tokio-stream = "0.1"
# tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3"

#pyo3 = { version = "0.17", features = ["anyhow", "chrono"], optional = true }
#pyo3-asyncio = { version = "0.17", features = ["attributes", "tokio-runtime"], optional = true }
#pyo3-log = { version = "0.7", optional = true }

# Networking libraries
poem = { version = "1.3", features = ["anyhow", "websocket", "openssl-tls"] }
openssl = { version = "0.10" }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
http = "0.2"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
native-tls = "0.2"
hyper-rustls = { version = "0.23", features = [] }
rustls = "0.20"
url = "2.4"

# Assemblyline libraries
assemblyline-client = "0.1"
assemblyline-markings = "0.1"

# Cloud service libraries
azure_core = "0.8"
# azure_identity = "0.9"
azure_storage = "0.9"
azure_storage_blobs = "0.9"
aws-config = "0.54"
aws-sdk-s3 = "0.24"
aws-types = "0.54"
aws-smithy-client = "0.54"


kube = {version = "0.80", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.17", features = ["v1_26"], optional = true }

[dev-dependencies]
assertor = "*"

[features]
#python = ["pyo3", "dep:pyo3-asyncio", "dep:pyo3-log"]
#extension-module = ["python", "pyo3/extension-module"]
serde_yaml = ["dep:serde_yaml"]
operator = ["dep:kube", "dep:schemars", "dep:k8s-openapi", "dep:serde_yaml"]
#default = ["extension-module"]
default = []