[package]
name = "haunted-house"
version = "0.1.8"
edition = "2021"
default-run = "haunted-house"

[dependencies]

# Language utilities
lazy_static = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "std"] }
time = { version = "0.3" }
rand = { version = "0.8", features = ["small_rng"] }
itertools = "0.14"
parking_lot = "0.12"

# Environment interfaces
tempfile = "3"
log = "0.4"
env_logger = "0.11"
# gethostname = "0.4"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", features = ["fs"] }

# Data proccessing and manipulating
cobs = "0.4"
byteorder = "1.4"
bitvec = { version = "1", features = ["serde"]}
yara = { version = "0.30", features= ["vendored"] }
# yara-x = {git = "https://github.com/VirusTotal/yara-x.git"}

# Parsing and serialization
regex = "1.8"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_with = "3.8"
postcard = { version = "1.0.2", features = ["alloc"] }
nom = "7"
hex = "0.4"
parse-size = { version = "1", features = ["std"] }
schemars = { version = "0.8.6", optional = true }
boreal-parser = "0.5"
base64 = "0.22"
strum = { version = "0.27", features = ["derive"] }
struct-metadata = { version = "0.1", features = ["serde_json"] }

# Database tools
deadpool = "0.12"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }

# Core framework
tokio = { version = "1", features = ["full"] }
futures = "0.3"

#pyo3 = { version = "0.17", features = ["anyhow", "chrono"], optional = true }
#pyo3-asyncio = { version = "0.17", features = ["attributes", "tokio-runtime"], optional = true }
#pyo3-log = { version = "0.7", optional = true }

# Networking libraries
poem = { version = "3.0", features = ["anyhow", "websocket", "openssl-tls"] }
openssl = { version = "0.10" }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
http = "1.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
url = "2.4"
# held back by aws libraries
hyper-rustls = { version = "0.24", features = ["http2", "rustls-native-certs"] }
rustls = { version = "0.21.8", features = ["dangerous_configuration"] }

# Assemblyline libraries
assemblyline-markings = "0.1"
assemblyline-models = { version = "0.1" }

# Cloud service libraries
azure_core = "0.21"
azure_identity = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
aws-config = "1.4"
aws-sdk-s3 = "1.29"
aws-types = "1.2"
aws-smithy-runtime = { version = "1.5", features = [ "tls-rustls" ] }
# aws-smithy-runtime-api = "1.6"


# kube = {version = "0.80", features = ["runtime", "derive"], optional = true }
# k8s-openapi = { version = "0.17", features = ["v1_26"], optional = true }

[dev-dependencies]
assertor = "*"
