[project]
name = "mquery_query_lib"
description = "Library code used within mquery for query manipulation."
readme = "readme.md"
requires-python = ">=3.6"
license = {text = "AGPL 3.0"}
dependencies = [
    "yaramod",
]
dynamic = ["version"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

#[project.scripts]
#my-script = "my_package.module:function"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# where = ["src"]
include = ["mquery_query_lib"]

# [tool.setuptools_scm]