[project]
name = "hauntedhouse"
description = "Client for haunted-house yara search engine."
readme = "readme.md"
requires-python = ">=3.10"
# keywords = ["one", "two"]
license = {text = "BSD 3-Clause License"}
#classifiers = [
#    "Framework :: Django",
#    "Programming Language :: Python :: 3",
#]
dependencies = [
    "aiohttp",
    "assemblyline",
    "pydantic",
    "yaramod",
]
dynamic = ["version"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

#[project.scripts]
#my-script = "my_package.module:function"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# where = ["src"]
include = ["hauntedhouse"]

# [tool.setuptools_scm]