[project]
name = "hauntedhouse"
description = "Client for hauntedhouse yara search engine."
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "MIT Licence"}
dependencies = [
    "aiohttp",
    "assemblyline",
    "pydantic",
    "mquery_query_lib",
    "arrow",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hauntedhouse"]

